profile section anchors, text alignment fix

--- a/src/app/main-page/main-page.component.css
+++ b/src/app/main-page/main-page.component.css
@@ -18,6 +18,7 @@
 #main h2 {
   color: var(--eleven-text-light-primary);
   margin: 10px 0 0 0;
+  text-align: center;
 }
 
 #scroll-arrow {
